# anari-ospray

./: .gitignore  Array.cpp  Array.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Frame.cpp  Frame.hpp  Geometry.cpp  Geometry.hpp  Group.cpp  Group.hpp  Instance.cpp  Instance.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  OSPRayDevice.cpp  OSPRayDevice.h  OSPRayDevice.hpp  OSPRayDeviceDebugFactory.cpp  OSPRayDeviceQueries.cpp  OSPRayGlobalState.cpp  OSPRayGlobalState.h  OSPRayLibrary.cpp  Object.cpp  Object.h  Object.hpp  README.md  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  SpatialField.cpp  SpatialField.hpp  Surface.cpp  Surface.hpp  Volume.cpp  Volume.hpp  (+10 more)
.github/workflows/: build.ps1  build.sh  ci.yml  test.sh
api/: anari_ospray_device.json  anari_ospray_objects.json
array/: Array.cpp  Array.h  Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ObjectArray.cpp  ObjectArray.h
camera/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h
cmake/: cmake_project_commands.cmake
code_gen/: .gitignore  CMakeLists.txt  OSPRayDeviceQueries.cpp  ospray_device.json  ospray_extensions.json  ospray_renderer_debug.json  ospray_renderer_default.json  ospray_renderer_pathtracer.json  ospray_renderer_scivis.json
frame/: Frame.cpp  Frame.h
gitlab/: .gitlab-ci.yml  build-kw.sh  build.ps1  kw-gen-report.sh  run_tests.ps1  test-kw.sh
include/anari/ext/ospray/: anariNewOSPRayDevice.h
renderer/: Debug.cpp  Debug.h  Pathtracer.cpp  Pathtracer.h  Renderer.cpp  Renderer.h  SciVis.cpp  SciVis.h
scene/: Group.cpp  Group.h  Instance.cpp  Instance.h  World.cpp  World.h
scene/light/: Directional.cpp  Directional.h  HDRI.cpp  HDRI.h  Light.cpp  Light.h  Point.cpp  Point.h  Quad.cpp  Quad.h  Spot.cpp  Spot.h
scene/surface/: Surface.cpp  Surface.h
scene/surface/geometry/: Cone.cpp  Cone.h  Curve.cpp  Curve.h  Cylinder.cpp  Cylinder.h  Geometry.cpp  Geometry.h  Isosurface.cpp  Isosurface.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
scene/surface/material/: Material.cpp  Material.h  Matte.cpp  Matte.h  PBM.cpp  PBM.h
scene/surface/material/sampler/: Image1D.cpp  Image1D.h  Image2D.cpp  Image2D.h  Sampler.cpp  Sampler.h
scene/volume/: TransferFunction1D.cpp  TransferFunction1D.h  Volume.cpp  Volume.h
scene/volume/spatial_field/: AMRField.cpp  AMRField.h  SpatialField.cpp  SpatialField.h  StructuredRegularField.cpp  StructuredRegularField.h  UnstructuredField.cpp  UnstructuredField.h
superbuild/: CMakeLists.txt
util/: Math.hpp  ParamWrapper.cpp  ParamWrapper.hpp  enumCast.hpp
